--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
         </div>
     </div>
-    <script src="https://kit.fontawesome.com/ebfc31661d.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ebfc31661d.js" 
+        ></script>
     <script src="./script.js"></script>
 </body>
 </html>
